# blast-radius-cr

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  evals.yml  publish.yml
evals/: README.md  cases.yaml  judge.py  run_evals.py  runner.py
evals/fixtures/: click-echo-docstring-only.patch  click-echo-nl-default.patch  flask-ensure-sync-optional-param.patch  flask-ensure-sync-tuple.patch  marshmallow-make-error-return.patch  real-attrs-1264-evolve-inst.patch  real-attrs-886-converter-setattr.patch  real-click-2130-remove-deprecated.patch  real-httpx-2165-charset-default.patch  requests-merge-setting-signature.patch  rich-cell-len-ascii-fastpath.patch  rich-cell-len-raises.patch
src/blast_radius/: __init__.py  analyzer.py  budget.py  cli.py  diff.py  languages.py  report.py  resolver.py  symbols.py
tests/: conftest.py
tests/accuracy/: test_resolver_accuracy.py  test_symbol_accuracy.py
tests/fixtures/aliasing/: consumer.py  utils.py
tests/fixtures/async-code/: api.py  service.py
tests/fixtures/chained-calls/: chain.py  consumer.py
tests/fixtures/class-patterns/: app.py  models.py
tests/fixtures/decorators/: core.py  handlers.py
tests/fixtures/multi-caller/: service_a.py  service_b.py  service_c.py  shared.py
tests/fixtures/nested/: engine.py  runner.py
tests/fixtures/simple-python/: api.py  db.py  service.py  utils.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_diff.py  test_report.py  test_resolver.py  test_symbols.py  test_symbols_js.py
