[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blast-radius"
version = "0.1.0"
description = "Blast radius analysis for code reviews. Find what breaks before it ships."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "click>=8.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
go = ["tree-sitter-go>=0.23"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-snapshot",
]

[project.scripts]
blast-radius = "blast_radius.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blast_radius"]
